--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
     "expo": "^47.0.0",
+    "expo-splash-screen": "^0.17.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
